<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.echoreplay</groupId>
    <artifactId>echoreplay</artifactId>
    <version>1.1.0</version>
    <packaging>pom</packaging>

    <name>EchoReplay</name>
    <description>Server-Side Region Replay for Paper. One shared source, one specialized jar per Minecraft version.</description>
    <url>https://github.com/IntellsGamer/EchoReplay</url>

    <modules>
        <module>1.21.5</module>
        <module>1.21.11</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <!-- defaults; overridden per version module -->
        <mc.version>1.21.5</mc.version>
        <paper.version>1.21.5-R0.1-SNAPSHOT</paper.version>
        <packetevents.version>2.8.0</packetevents.version>
        <gson.version>2.11.0</gson.version>
    </properties>

    <build>
        <!-- Share the single source tree; each module only swaps paper/packetevents. -->
        <sourceDirectory>${basedir}/../src/main/java</sourceDirectory>
        <finalName>echoreplay-${mc.version}</finalName>
        <resources>
            <resource>
                <!-- EchoReplay's own plugin.yml IS shipped; PacketEvents' plugin.yml
                     is excluded per-artifact in the shade <filters> below. -->
                <directory>${basedir}/../src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.github.retrooper</pattern>
                                    <shadedPattern>com.echoreplay.libs.packetevents</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.github.retrooper</pattern>
                                    <shadedPattern>com.echoreplay.libs.packetevents.internal</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.protobuf</pattern>
                                    <shadedPattern>com.echoreplay.libs.protobuf</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>com.echoreplay.libs.gson</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>com.github.retrooper:packetevents-spigot</artifact>
                                    <excludes>
                                        <exclude>plugin.yml</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>dev.idebugger.echoreplay.EchoReplay</mainClass>
                        </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>${packetevents.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>